--- a/css/nav.css
+++ b/css/nav.css
@@ -23,3 +23,18 @@ nav{
     top: 7px;
     left:7px;
 }
+
+@keyframes showNav{
+    from {
+        transform: translateY(50px);
+    }
+    to {
+        transform: none;
+      }
+}
+
+.nav{
+    transform: translateY(50px);
+    animation: showNav 1s ease-in-out forwards;
+    animation-delay: 0.1s;
+}
