--- a/css/find.css
+++ b/css/find.css
@@ -37,3 +37,8 @@
     border-radius: 10px;
     background-color: rgba(128, 128, 128, 0.082);
 }
+  
+  .find{
+    transform: translateY(40px);
+    animation: show 0.5s ease-in-out forwards;
+  }
